unpackaged/main/default/objects/A1_C360API_Tokens__mdt/A1_C360API_Tokens__mdt.object-meta.xml
<CustomObject>
    <description>Purpose of this MDT is to store the access tokens returned by 360 API, so that tokens can be reused for data api calls.</description>
    <label>A1_C360API_Tokens</label>
    <pluralLabel>A1_C360API_Tokens</pluralLabel>
</CustomObject>