unpackaged/main/default/objects/A1_C360API_Tokens__mdt/fields/expires_at__c.field-meta.xml
<CustomField>
    <fullName>expires_at__c</fullName>
    <label>expires_at</label>
    <type>DateTime</type>
</CustomField>