unpackaged/main/default/objects/A1_C360API_Tokens__mdt/fields/expires_in__c.field-meta.xml
<CustomField>
    <fullName>expires_in__c</fullName>
    <label>expires_in</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>