unpackaged/main/default/objects/A1_C360API_Tokens__mdt/listViews/all_fields.listView-meta.xml
<ListView>
    <fullName>all_fields</fullName>
    <columns>MasterLabel</columns>
    <columns>BrandId__c</columns>
    <columns>access_token__c</columns>
    <columns>expires_at__c</columns>
    <columns>expires_in__c</columns>
    <filterScope>Everything</filterScope>
    <label>all fields</label>
</ListView>